--- a/bb.html
+++ b/bb.html
@@ -22,7 +22,9 @@
 <script type="text/javascript" src="http://www.betabrand.com/skin/m/1334282321/js/lib/ds-sleight.js,/skin/frontend/base/default/js/ie6.js" ></script>
 <![endif]-->
 <link type="text/css" rel="stylesheet" href="http://www.betabrand.com/skin/m/1340331283/skin/frontend/betabrand/betabrand/fonts/gnuolane/gnuolane.css,/skin/frontend/betabrand/betabrand/fonts/proximanova_regular/stylesheet.css,/skin/frontend/betabrand/betabrand/fonts/proximanova_semibold/stylesheet.css,/skin/frontend/betabrand/betabrand/fonts/proximanova_light/stylesheet.css,/skin/frontend/betabrand/betabrand/css/local.css,/skin/frontend/betabrand/betabrand/css/jquery.fancybox.css" media="all" />
+
 <link type="text/css" rel="stylesheet" href="http://www.betabrand.com/skin/m/1340331283/skin/frontend/betabrand/betabrand/css/featuredwidget.css" media="all" />
+<link type="text/css" rel="stylesheet" href="cubes.css" media="all" />
 <script type="text/javascript" src="http://www.betabrand.com/skin/m/1341341656/js/jquery/jquery-1.7.2.js,/js/jquery/jquery-noconflict.js,/js/jquery/jquery.isotope.js,/js/betabrand/jquery.share.js,/js/betabrand/jquery.isobox.js,/js/jquery/jquery.spin.js,/js/jquery/jquery.autoellipsis-1.0.3.js,/js/modernizr/modernizr.min.js,/js/betabrand/jquery.collections.js,/js/jquery/jquery.easing.1.3.js,/js/jquery/jquery.hoverintent.js,/js/jquery/fancybox/jquery.fancybox.js" ></script>
 <script type="text/javascript" src="http://www.betabrand.com/skin/m/1341341656/js/betabrand/jquery.emailalert.js,/js/betabrand/jquery.viewnudge.js,/js/betabrand/jquery.firecart.js,/js/betabrand/jquery.buybar.js,/js/betabrand/jquery.panelgallery.js,/js/betabrand/jquery.counterScroll.js,/js/betabrand/jquery.betabrand.js,/js/jquery/jquery.imagesloaded.js,/js/jquery/jquery.scrollTo.js" ></script>
 <script type="text/javascript" async="true" src="//cdn.optimizely.com/js/67982652.js"></script><meta name="google-site-verification" content="AVfda1I4zvJQkSfNafwMHn3jkQc_DHdNJOa2GBiuWTQ" /></head>
