--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
-<a href="javascript:var imgs=[];var numPanes;var yRotate=0;var faces='';var rotateAmt;var radius=0;var width=836;var height=400;jQuery.each(jQuery('div.mainpane a img'),function (i,v){imgs.push(jQuery(this).attr('src'))});if(imgs.length){numPanes=imgs.length;rotateAmt=360/numPanes;radius=3.08*width/(Math.tan(180/numPanes));jQuery.each(imgs,function (i,v){faces=faces+' <div style=\'position:absolute; height:'+height+'px; width:'+width+'px; border: 1px solid black; background-color: rgba(0,0,0,0.6); background-size: contain;  background-image: url('+v+'); -webkit-backface-visibility:hidden; -webkit-transform: rotateY('+yRotate+'deg) translateZ('+radius+'px)\'></div>';yRotate=yRotate+rotateAmt;})}jQuery('#fpane').hide();jQuery('head').append('<style type=\'text/css\' media=\'screen\'>@-webkit-keyframes spin {from { -webkit-transform: rotateY(0); }  to   { -webkit-transform: rotateY(-360deg); }}</style>');jQuery('#fnav').css('overflow','visible');jQuery('#fnav').append('<div style=\'margin: 0 auto; margin-top:30px; width:1200px; height:700px; -webkit-perspective: 12000; -webkit-perspective-origin: 50% 50%\'><div style=\'width:100%; height:100%; -webkit-transform 2s; -webkit-transform-style: preserve-3d\'><div style=\'position:relative; top:0px; margin: 0 auto; height:550px; width:1150px; -webkit-transform-style: preserve-3d; -webkit-animation: spin 60s infinite linear;\'>'+faces+'</div></div></div>');">
-Bookmarklet
+<html>
+<head>
+<style type='text/css' media='screen'>
+.bookmark{
+display: inline-block;
+background: #87B340;
+font: bold 18px Arial;
+color: white;
+padding: 5px 10px;
+width: 90px;
+margin-top: 10px;
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+text-decoration: none;
+white-space: nowrap;
+width: 76px;
+}
+</style>
+<title>Goofing off with css3, git and javascript</title>
+</head>
+<body>
+<a class='bookmark' href="javascript:var imgs=[];var numPanes;var yRotate=0;var faces='';var rotateAmt;var radius=0;var width=836;var height=400;jQuery.each(jQuery('div.mainpane a img'),function (i,v){imgs.push(jQuery(this).attr('src'))});if(imgs.length){numPanes=imgs.length;rotateAmt=360/numPanes;radius=3.08*width/(Math.tan(180/numPanes));jQuery.each(imgs,function (i,v){faces=faces+' <div style=\'position:absolute; height:'+height+'px; width:'+width+'px; border: 1px solid black; background-color: rgba(0,0,0,0.6); background-size: contain;  background-image: url('+v+'); -webkit-backface-visibility:hidden; -webkit-transform: rotateY('+yRotate+'deg) translateZ('+radius+'px)\'></div>';yRotate=yRotate+rotateAmt;})}jQuery('#fpane').hide();jQuery('head').append('<style type=\'text/css\' media=\'screen\'>@-webkit-keyframes spin {from { -webkit-transform: rotateY(0); }  to   { -webkit-transform: rotateY(-360deg); }}</style>');jQuery('#fnav').css('overflow','visible');jQuery('#fnav').append('<div style=\'margin: 0 auto; margin-top:30px; width:1200px; height:700px; -webkit-perspective: 12000; -webkit-perspective-origin: 50% 50%\'><div style=\'width:100%; height:100%; -webkit-transform 2s; -webkit-transform-style: preserve-3d\'><div style=\'position:relative; top:0px; margin: 0 auto; height:550px; width:1150px; -webkit-transform-style: preserve-3d; -webkit-animation: spin 60s infinite linear;\'>'+faces+'</div></div></div>');">
+Spinning Ring Feature
 </a>
-
+</body>
+</html>
 
