--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Drag this:
 Spinning Ring Feature
 </a>
 to your bookmarks bar here: <img src='bookmarks.jpg'>
-then switch to <a href='betabrand.com' target='_blank'>betabrand.com</a> and click the new bookmark.
+then switch to <a href='http://www.betabrand.com' target='_blank'>betabrand.com</a> and click the new bookmark.
 </body>
 </html>
 
